--- a/assets/css/setting.css
+++ b/assets/css/setting.css
@@ -2,14 +2,17 @@ body{
     margin: 0;
     padding: 0;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 h2 {
     margin: 0!important;
 }
+
 @font-face {
     font-family: 'Epilogue';
     src: url("../font-family/epilogue/static/Epilogue-Bold.ttf"),
@@ -22,43 +25,49 @@ h2 {
     font-family: 'Inter';
     src: url("../font-family/inter/static/Inter-SemiBold.ttf");
 }
-/****/
+
 .row-connected .preview {
    display: none;
 }
-/****/
+
 .container-connected {
     width: 100%;
 }
+
 .connected {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-left: 15px;
 }
+
 .block-connected {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .row-connected .title {
     font-family: 'Epilogue';
     font-size: 24px;
     line-height: 36px;
     color: #171A1FFF;
 }
+
 .block-connected p {
     font-family: 'Inter';
     font-size: 16px;
     line-height: 26px;
     color: #6E7787FF;
 }
+
 .content-connected-first h2 {
     font-family: 'Inter';
     font-size: 16px;
     line-height: 26px;
     color: #323842FF;
 }
+
 .content-connected-second {
     display: flex;
     flex-direction: column;
@@ -69,46 +78,55 @@ h2 {
     border: 1px #F3F4F6FF solid;
     padding: 15px;
 }
+
 .content-connected-second h2 {
     font-family: 'Inter';
     font-size: 16px;
     line-height: 26px;
     color: #323842FF;
 }
+
 .content-connected-second p {
     font-size: 12px;
     line-height: 20px;
 }
+
 .content-connected-second .text {
     position: relative;
     top: -22px;
 }
+
 .content-connected-second .letter {
     font-family: 'Epilogue';
     font-size: 24px;
     line-height: 36px;
     color: #8353E2FF;
 }
+
 .content-connected-first {
     display: flex;
     align-items: center;
     gap: 22px;
     margin-top: 20px;
 }
+
 .content-connected-first img {
     width: 300px;
     height: 200px;
 }
+
 .content-connected-second img {
     width: 193px;
     height: 96px;
 }
+
 .first-btn, .second-btn {
     display: flex;
     align-items: center;
     gap: 12px;
     margin-top: 16px;
 }
+
 .block-connected .btn {
     display: flex;
     align-items: center;
@@ -121,29 +139,32 @@ h2 {
     font-family: 'Inter';
     border: none;
 }
+
 .first-btn .btn1 {
     color: #9095A0FF;
     border: 1px #9095A0FF solid;
 }
+
 .first-btn .btn2 {
     color: #FFFFFFFF;
     background: #00BDD6FF;
     border: none;
 }
+
 .second-btn {
     justify-content: center;
 }
+
 .second-btn .btn1 {
     background: #FFFFFFFF;
 }
-.second-btn .btn1 {
 
-}
 /****switch***/
 .contact {
     margin-left: 10px;
     padding: 10px;
 }
+
 .logo-container {
     display: flex;
     align-items: center;
@@ -151,16 +172,19 @@ h2 {
     border-bottom: 1px  #F3F4F6FF solid;
     margin-top: 20px;
 }
+
 .logo-container img {
     width: 40px;
     height: 40px;
 }
+
 .row-left {
     display: flex;
     align-items: center;
     gap: 24px;
     margin-bottom: 20px;
 }
+
 .row-left h5 {
     font-family: 'Inter';
     font-size: 14px;
@@ -168,24 +192,28 @@ h2 {
     color: #171A1FFF;
     margin: 0;
 }
+
 .row-left p {
     font-family: 'Inter';
     font-size: 14px;
     line-height: 22px;
     color: #6E7787FF;
 }
+
 .row-right {
     display: flex;
     align-items: center;
     gap: 25px;
     margin-bottom: 20px;
 }
+
 .row-right p {
     font-family: 'Inter';
     font-size: 14px;
     line-height: 22px;
     color: #323842FF;
 }
+
 .switch {
     position: relative;
     display: flex;
@@ -193,6 +221,7 @@ h2 {
     width: 47px;
     height: 24px;
 }
+
 .slider {
     position: absolute;
     top: 0;
@@ -203,6 +232,7 @@ h2 {
     border-radius: 34px;
     transition: 0.4s;
 }
+
 .slider:before {
     position: absolute;
     content: "";
@@ -214,18 +244,21 @@ h2 {
     border-radius: 50%;
     transition: 0.4s;
 }
+
 input:checked + .slider {
     background-color: #2196F3;
 }
+
 input:checked + .slider:before {
     transform: translateX(26px);
 }
 
-/********************/
+/***************/
 .content-connected-second-2 {
     display: none;
     width: 100%;
 }
+
 .seconds {
     display: flex;
     flex-direction: row;
@@ -238,11 +271,13 @@ input:checked + .slider:before {
     margin-bottom: 50px!important;
     padding: 20px;
 }
+
 .seconds-container .second-btn {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
 }
+
 .seconds-container button {
     display: flex;
     align-items: center;
@@ -255,12 +290,14 @@ input:checked + .slider:before {
     padding: 0 8px;
     opacity: 1;
 }
+
 .seconds-container .btn1 {
     width: 60px;
     height: 32px;
     color: #323842FF;
     background: #FFFFFFFF;
 }
+
 .seconds-container .btn2 {
     width: 65px;
     height: 32px;
@@ -268,6 +305,7 @@ input:checked + .slider:before {
     color: #8353E2FF;
     background: #F5F2FDFF;
 }
+
 .seconds-container .text {
     position: relative;
     top: 0;
@@ -288,6 +326,7 @@ input:checked + .slider:before {
         margin-left: 0;
     }
 }
+
 @media screen and (max-width: 800px) {
     .contact {
         margin-bottom: 50px;
@@ -302,6 +341,7 @@ input:checked + .slider:before {
         margin-bottom: 0!important;
     }
 }
+
 @media screen and (max-width: 576px) {
     .contact {
         padding: 0;
