arangement de fichier et de dossier

--- a/assets/css/calendar.css
+++ b/assets/css/calendar.css
@@ -3,18 +3,26 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+
 .dashboard-container {
     margin-left: 18%!important;
     padding: 0!important;
 }
+
 * {
     margin: 0!important;
     padding: 0;
 }
-/*responsive*/
+
+button {
+    cursor: pointer;
+}
+
+
 .partie_mobile {
     display: none;
 }
+
 @font-face {
     font-family: 'Epilogue';
     src: url("../font-family/epilogue/static/Epilogue-Bold.ttf"),
@@ -35,12 +43,14 @@ body{
     margin-top: 10px!important;
     margin-bottom: 15px!important;
 }
+
 .calendar-header h1 {
     font-family: 'Epilogue';
     font-size: 24px;
     line-height: 36px;
     color: #171A1FFF;
 }
+
 .calendar-header button {
     background: #00BDD6FF;
     color: #fff;
@@ -53,52 +63,63 @@ body{
     height: 40px;
     padding: 0 12px;
 }
-/**/
+
 .calendar-container {
     display: flex;
     gap: 29px;
     margin-left: 15px;
 }
+
 .calendar-container .first-part {
     position: relative;
-    top: -40px;
+    top: -20px;
 }
+
 .calendar-row {
     width: 100%;
     height: 185px;
 }
+
 .calendar-row-1 {
     background: #FAFAFBFF;
     padding: 16px;
 }
+
 .calendar-content .date {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .dec-2022 h2 {
     font-family: 'Epilogue';
     font-size: 18px;
     line-height: 28px;
     color: #565E6CFF;
 }
+
 .calendar-content .dec-2022 {
     display: flex;
     align-items: center;
 }
+
 .calendar-content .icon-button {
     display: flex;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 100px!important;
 }
+
 .calendar-content .day-dropdown {
     display: flex;
     align-items: center;
 }
+
 .icon img {
     width: 24px;
     height: 24px;
+    cursor: pointer;
 }
+
 .calendar-content button {
     font-family: 'Inter';
     font-size: 12px;
@@ -111,6 +132,7 @@ body{
     border: none;
     border-radius: 4px;
 }
+
 .calendar-content select {
     width: 78px;
     height: 40px;
@@ -118,27 +140,31 @@ body{
     border: none;
     font-family: 'Inter';
 }
+
 .calendar-content .day-dropdown img {
     width: 40px;
 }
-/**/
+
 .calendar-container .dec-2022 {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .calendar-button .row-day {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 20px!important;
 }
+
 .calendar-button .jours {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
     text-align: center;
 }
+
 .calendar-button .days {
     width: 35px;
     font-family: 'Inter';
@@ -146,6 +172,7 @@ body{
     line-height: 20px;
     color: #9095A0FF;
 }
+
 .calendar-button button {
     width: 30px;
     height: 30px;
@@ -158,19 +185,23 @@ body{
     line-height: 26px;
     color: #323842FF;
 }
+
 .calendar-button .jours .btnA {
     background: #EBFDFFFF;
 }
+
 .calendar-button .jours .btnB {
     background: #00BDD6FF;
     color: white;
 }
+
 .day_content {
     display: flex;
     align-items: center;
     text-align: center;
     gap: 13px;
 }
+
 .day_content .btn {
     display: flex;
     flex-direction: column;
@@ -178,11 +209,13 @@ body{
     width: 100%;
     gap: 5px;
 }
+
 .day_content .text-day {
     font-family: 'Inter';
     font-size: 14px;
     color: #00BDD6FF;
 }
+
 .day_content button {
     width: 30px;
     height: 30px;
@@ -195,21 +228,25 @@ body{
     border: none;
     border-radius: 18px;
 }
+
 .day_content .btn1 {
     color: #9095A0FF;
 }
+
 .day_content .btn2 {
     color: #006D7CFF;
     background: #C8F9FFFF;
 }
+
 .day_content .btn3 {
     color: #FFFFFFFF;
     background: #00BDD6FF;
 }
-/**/
+
 .calendar-meeting {
     width: 100%;
 }
+
 .calendar-event-title {
     width: 100% !important;
 }
@@ -219,17 +256,20 @@ body{
     gap: 8px;
     align-items: center;
 }
+
 .time .img_oval {
     width: 100%;
     display: flex;
     align-items: center;
 }
+
 .time .hour {
     font-family: 'Inter';
     font-size: 12px;
     color: #9095A0FF;
     width: 70px;
 }
+
 .time .time-blue {
     font-family: 'Inter';
     font-size: 12px;
@@ -237,16 +277,19 @@ body{
     color: #00BDD6FF;
     width: 70px;
 }
+
 .time img {
     width: 8px;
     height: 8px;
     cursor: pointer;
 }
+
 .time .line-blue {
     width: 100%;
     color: #00BDD6FF!important;
     border: 1px #00BDD6FF solid;
 }
+
 .time .line-black {
     width: 100%;
     color: #00BDD6FF!important;
@@ -254,6 +297,7 @@ body{
     border-width: 1px;
     border-color: #DEE1E6FF;
 }
+
 .event-title {
     height: 80px;
     background: #F8F9FAFF;
@@ -261,6 +305,7 @@ body{
     padding: 17px;
     margin-left: 70px;
 }
+
 .event-title h3 {
     font-family: 'Inter';
     font-size: 14px;
@@ -268,54 +313,64 @@ body{
     color: #171A1FFF;
     margin: 0!important;
 }
+
 .event-title .row {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .picture-avatar {
     display: flex;
     align-items: center;
     gap: 10px;
 }
+
 .img .avatar {
     width: 28px;
     height: 28px;
     margin-left: -12px!important;
 }
+
 .event-title .text {
     display: flex;
     align-items: center;
     gap: 20px;
 }
+
 .event-title .text .text-time {
     display: flex;
     align-items: center;
     gap: 10px;
 }
+
 .event-title .text img {
     width: 16px;
     height: 16px;
 }
+
 .points img {
     width: 24px;
     height: 24px;
 }
+
 .event-title .text p {
     font-family: 'Inter';
     font-size: 12px;
     line-height: 20px;
     color: #6E7787FF;
 }
+
 .calendar-meeting-title {
     margin-top: 80px!important;
 }
-/**/
+
 .Activities-calendar .big-container {
     padding: 16px;
     border: 1px #F3F4F6FF solid;
     margin-top: 20px!important;
 }
+
 .Activities-calendar .nav h2 {
     top: 22px;
     left: 20px;
@@ -324,31 +379,37 @@ body{
     line-height: 28px;
     color: #171A1FFF;
 }
+
 .Activities-calendar .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .Activities-calendar .row img {
     width: 40px;
 }
+
 .Activities-calendar .text h4 {
     font-family: 'Inter';
     font-size: 14px;
     line-height: 22px;
     color: #171A1FFF;
 }
+
 .Activities-calendar .text p {
     font-family: 'Inter';
     font-size: 12px;
     line-height: 17px;
     color: #171A1FFF;
 }
+
 .activities-row {
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
+
 .activities-row .row {
     display: flex;
     align-items: center;
@@ -357,6 +418,7 @@ body{
     border-radius: 8px;
     padding: 12px;
 }
+
 /*responsive*/
 @media screen and (max-width: 1200px) {
     .calendar-container {
@@ -366,6 +428,7 @@ body{
         top: 40px;
     }
 }
+
 @media screen and (max-width: 992px) {
     main {
         margin-left: 0!important;
@@ -377,6 +440,7 @@ body{
        margin-bottom: 20px!important;
     }
 }
+
 @media screen and (max-width: 576px) {
     .calendar-header button {
         display: none;
@@ -518,6 +582,7 @@ body{
         z-index: -1;
     }
 }
+
 @media screen and (max-width: 372px) {
     .partie_mobile .row-1 {
         margin-left: 0!important;
